--- a/capacity_app/templates/capacity_app/admin_view_request.html
+++ b/capacity_app/templates/capacity_app/admin_view_request.html
@@ -159,7 +159,7 @@ td {
                                     </td>
                                     <td nowrap class="reject">
                                         <button type="button" class="btn btn-danger btn-sm" title="Reject Request">
-                                            <a style="text-decoration:none;color:#fff;" href="{% url 'update_request' pk=i.request_id %}">
+                                            <a style="text-decoration:none;color:#fff;" href="{% url 'reject_request' pk=i.request_id %}">
                                                 <i class="fas fa-times-circle"></i>&nbsp; Reject
                                             </a>
                                         </button>
