--- a/capacity_app/templates/capacity_app/create_request.html
+++ b/capacity_app/templates/capacity_app/create_request.html
@@ -181,9 +181,11 @@ input[type="text"] {
                                 <label for="move_group_name" class="form-label">Milestone <sup><strong>*</strong></sup></label>
                                 <select id="move_group_name" class="form-select" name="move_group_name" required>
                                     <option value="" selected="selected" disabled="disabled">Milestone</option>
-                                    <option value="P1">P1</option>
-                                    <option value="P2">P2</option>
+                                    {% for i in milestone %}
+                                    <option value={{i.name}}>{{i.name}}</option>
+                                    {% endfor %}
                                 </select>
+
                             </div>
                             <div class="mb-3 col-md-6">
                                 <label for="remarks" class="form-label">Remarks <sup><strong>*</strong></sup></label>
