--- a/capacity_app/templates/capacity_app/dashboard.html
+++ b/capacity_app/templates/capacity_app/dashboard.html
@@ -21,7 +21,7 @@
                 <span>Dashboard</span>
             </a>
         </li><!-- End Dashboard Nav -->
-
+        {% if "admin" not in user_group %}
         <li class="nav-item">
             <a class="nav-link collapsed" data-bs-target="#components-nav1" data-bs-toggle="collapse" href="#">
                 <i class="bi bi-journal-text"></i>
@@ -37,6 +37,7 @@
                 </li>
             </ul>
         </li><!-- End Components Nav -->
+        {% endif %}
 
         {% if query_data == "admin" or query_data %}
         <li class="nav-heading">Capacity - Alpha4</li>
@@ -48,7 +49,7 @@
                 <i class="bi bi-chevron-down ms-auto"></i>
             </a>
             <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-                {% if user_group != "admin" %}
+                {% if "admin" not in user_group %}
                 <li>
                     <a href="{% url 'create_request' %}">
                         <i class="bi bi-circle"></i><span>Create Request</span>
