--- a/capacity_app/templates/capacity_app/project_view_request.html
+++ b/capacity_app/templates/capacity_app/project_view_request.html
@@ -123,7 +123,7 @@ tbody {
                 <span>Dashboard</span>
             </a>
         </li><!-- End Dashboard Nav -->
-
+    {% if "admin" not in user_group %}
         <li class="nav-item">
             <a class="nav-link" data-bs-target="#components-nav1" data-bs-toggle="collapse" href="#">
                 <i class="bi bi-journal-text"></i>
@@ -136,15 +136,18 @@ tbody {
                         <i class="bi bi-circle"></i><span>Create Project Request</span>
                     </a>
                 </li>-->
+
                 <li>
                     <a href="{% url 'project_view_request' %}"  class="active">
                         <i class="bi bi-circle"></i><span>View Project Plan</span>
                     </a>
                 </li>
+
             </ul>
         </li><!-- End Components Nav -->
+        {% endif %}
 
-        {% if query_data == "admin" or query_data %}
+        {% if query_data %}
         <li class="nav-heading">Capacity - Alpha4</li>
         <li class="nav-item">
             <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
@@ -319,18 +322,19 @@ tbody {
                                         </tr>
                                         </thead>
                                         <tbody>
-                                        {% for i in data %}
+                                        {% for i in mile_stone %}
                                         <tr>
-                                            <td>{{data.0.milestone_name}}</td>
-                                            <td>{{data.0.date}}</td>
-                                            {% endfor %}
+                                            <td>{{i.name}}</td>
+                                            <td>{{i.date}}</td>
+                                        {% endfor %}
                                         </tr>
+
                                         </tbody>
                                     </table>
                                 </div>
                             </div>
                             <br>
-                            {% if data.0.procurement_approval == True and data.0.financial_approval == True %}
+                            {% if data.0.procurement_approval == True and data.0.financial_approval == True and "User_Group_Project_Planner" in user_group %}
                             <div class="text-center">
                                 <button type="button" class="btn btn-primary" title="Edit Request">
                                      <a style="text-decoration:none;color:#fff;" href="#"><i class="fas fa-edit"></i>&nbsp;Edit</a></button>
