--- a/capacity_app/templates/capacity_app/financial_approval.html
+++ b/capacity_app/templates/capacity_app/financial_approval.html
@@ -128,10 +128,10 @@ td {
                                     <td nowrap class="std_stable1">{{i.std_stable1}}</td>
                                     <td nowrap class="std_stable2">{{i.std_stable2|floatformat}}</td>
                                     <td nowrap class="std_arbor">{{i.std_arbor|floatformat}}</td>
-                                    <td nowrap class="stable1">{{i.stable1}}</td>
-                                    <td nowrap class="stable2">{{i.stable2}}</td>
-                                    <td nowrap class="arbor">{{i.arbor}}</td>
-                                    <td nowrap class="gravit">{{i.gravit}}</td>
+                                    <td nowrap class="stable1">{{i.stable1|floatformat}}</td>
+                                    <td nowrap class="stable2">{{i.stable2|floatformat}}</td>
+                                    <td nowrap class="arbor">{{i.arbor|floatformat}}</td>
+                                    <td nowrap class="gravit">{{i.gravit|floatformat}}</td>
                                     <td nowrap class="updated_at">{{i.created_at|date:'Y-m-d H:i:s'}}</td>
                                     <td nowrap class="remarks">{{i.remarks}}</td>
                                     <!--<td nowrap class="milestone_name">{{i.date}}</td>-->
