--- a/capacity_app/templates/capacity_app/view_request.html
+++ b/capacity_app/templates/capacity_app/view_request.html
@@ -177,12 +177,12 @@ td {
                                     <td nowrap class="move_group_name">{{i.move_group_name}}</td>
                                     <td nowrap class="remarks">{{i.remarks}}</td>
                                     <td nowrap class="status">{{i.tkt_status}}</td>
-<!--                                    <<td>-->
-<!--                                        {% if "admin" in user_group %}-->
-<!--                                        <button type="button" class="btn btn-success btn-sm" title="Reject"><a style="text-decoration:none;color:#fff;" href="{% url 'completed_request' pk=i.request_id %}"><i class="fas fa-tasks"></i></a></button>-->
-<!--                                        <button type="button" class="btn btn-success btn-sm" title="Complete"><a style="text-decoration:none;color:#fff;" href="{% url 'completed_request' pk=i.request_id %}"><i class="fas fa-tasks"></i></a></button>-->
-<!--                                        {% endif %}-->
-<!--                                    </td>-->
+                                    <!--<td>
+                                        {% if "admin" in user_group %}
+                                        <button type="button" class="btn btn-success btn-sm" title="Reject"><a style="text-decoration:none;color:#fff;" href="{% url 'completed_request' pk=i.request_id %}"><i class="fas fa-tasks"></i></a></button>
+                                        <button type="button" class="btn btn-success btn-sm" title="Complete"><a style="text-decoration:none;color:#fff;" href="{% url 'completed_request' pk=i.request_id %}"><i class="fas fa-tasks"></i></a></button>
+                                        {% endif %}
+                                    </td>-->
                                     {% endfor %}
                                 </tr>
                                 </tbody>
