--- a/capacity_app/templates/capacity_app/view_request.html
+++ b/capacity_app/templates/capacity_app/view_request.html
@@ -179,8 +179,10 @@ td {
                                     <td nowrap class="status">{{i.tkt_status}}</td>
                                     <!--<td>
                                         {% if "admin" in user_group %}
-                                        <button type="button" class="btn btn-success btn-sm" title="Reject"><a style="text-decoration:none;color:#fff;" href="{% url 'completed_request' pk=i.request_id %}"><i class="fas fa-tasks"></i></a></button>
-                                        <button type="button" class="btn btn-success btn-sm" title="Complete"><a style="text-decoration:none;color:#fff;" href="{% url 'completed_request' pk=i.request_id %}"><i class="fas fa-tasks"></i></a></button>
+                                        <button type="button" class="btn btn-success btn-sm" title="Reject">
+                                        <a style="text-decoration:none;color:#fff;" href="{% url 'completed_request' pk=i.request_id %}"><i class="fas fa-tasks"></i></a></button>
+                                        <button type="button" class="btn btn-success btn-sm" title="Complete">
+                                        <a style="text-decoration:none;color:#fff;" href="{% url 'completed_request' pk=i.request_id %}"><i class="fas fa-tasks"></i></a></button>
                                         {% endif %}
                                     </td>-->
                                     {% endfor %}
