--- a/capacity_app/templates/capacity_app/history_request.html
+++ b/capacity_app/templates/capacity_app/history_request.html
@@ -36,6 +36,73 @@ td {
 }
 </style>
 <body>
+<aside id="sidebar" class="sidebar">
+
+    <ul class="sidebar-nav" id="sidebar-nav">
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="{% url 'dashboard' %}">
+                <i class="bi bi-grid"></i>
+                <span>Dashboard</span>
+            </a>
+        </li><!-- End Dashboard Nav -->
+        {% if "admin" not in user_group %}
+        <li class="nav-item">
+            <a class="nav-link" data-bs-target="#components-nav1" data-bs-toggle="collapse" href="#">
+                <i class="bi bi-journal-text"></i>
+                <span>Project Planner</span>
+                <i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="components-nav1" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
+                <!--<li>
+                    <a href="{% url 'project_create_request' %}">
+                        <i class="bi bi-circle"></i><span>Create Project Request</span>
+                    </a>
+                </li>-->
+
+                <li>
+                    <a href="{% url 'project_view_request' %}">
+                        <i class="bi bi-circle"></i><span>View Project Plan</span>
+                    </a>
+                </li>
+
+            </ul>
+        </li><!-- End Components Nav -->
+        {% endif %}
+
+        {% if query_data %}
+        <li class="nav-heading">Capacity - Alpha4</li>
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
+                <i class="bi bi-menu-button-wide"></i>
+                <span>Request - Alpha4</span>
+                <i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                {% if user_group != "admin" %}
+                <li>
+                    <a href="{% url 'create_request' %}">
+                        <i class="bi bi-circle"></i><span>Create Request</span>
+                    </a>
+                </li>
+                {% endif %}
+                <li>
+                    <a href="{% url 'view_request' %}">
+                        <i class="bi bi-circle"></i><span>View Request</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'completed_ticket_data' %}">
+                        <i class="bi bi-circle"></i><span>Completed Request</span>
+                    </a>
+                </li>
+            </ul>
+        </li><!-- End Components Nav -->
+        {% endif %}
+    </ul>
+
+</aside><!-- End Sidebar-->
+
+<main id="main" class="main">
 <div class="pagetitle">
     <h1>History Request</h1>
     <nav>
@@ -58,22 +125,22 @@ td {
                                data-toggle="table"
                                data-pagination="true"
                                data-search="true"
-                               data-show-columns="true"
-                               data-show-toggle="true"
+                               data-show-columns="false"
+                               data-show-toggle="false"
                                data-show-columns-toggle-all="false"
                                data-show-export="true"
                                data-export-data-type="all"
                                data-response-handler="responseHandler"
                                data-show-fullscreen="true"
-                               data-show-pagination-switch="true"
+                               data-show-pagination-switch="false"
+                               data-height="500"
                                data-sort-name="updated_at"
                                data-sort-order="desc"
-                               data-height="500"
                                data-pagination-pre-text="Previous"
                                data-pagination-next-text="Next"
                                data-pagination-h-align="left"
                                data-pagination-detail-h-align="right"
-                               data-page-size="20"
+                               data-page-size="10"
                                data-page-list="[20, 30, 40, 50, All]"
                                data-buttons-class="primary">
                             <thead>
@@ -90,29 +157,25 @@ td {
                                 <th nowrap class="arbor" data-field="arbor" data-sortable="true" >Arbor (TB)</th>
                                 <th nowrap class="gravit" data-field="gravit" data-sortable="true" > Gravit (TB)</th>
                                 <th nowrap class="updated_at" data-field="updated_at" data-sortable="true" >Updated Date</th>
-                                <th nowrap class="move_group_name" data-field="move_group_name" data-sortable="true" >Move Group Name</th>
                                 <th nowrap class="remarks" data-field="remarks" data-sortable="true" >Remarks</th>
-                                <th nowrap class="status" data-field="status" data-sortable="true" data-formatter="priceFormatter">Status</th>
                             </tr>
                             </thead>
                             <tbody>
                             {% for i in data %}
                             <tr>
-                                <td nowrap class="request_id">{{i.request_id}}</td>
+                                <td nowrap class="request_id">{{i.id}}</td>
                                 <td nowrap class="dc">{{i.data_center}}</td>
                                 <td nowrap class="project_name">{{i.project_name}}</td>
-                                <td nowrap class="user_id">{{i.user_id}}</td>
-                                <td nowrap class="std_stable1">{{i.std_stable_1|floatformat}}</td>
-                                <td nowrap class="std_stable2">{{i.std_stable_2|floatformat}}</td>
-                                <td nowrap class="std_arbor">{{i.std_arbor|floatformat}}</td>
-                                <td nowrap class="stable1">{{i.stable_1|floatformat}}</td>
-                                <td nowrap class="stable2">{{i.stable_2|floatformat}}</td>
-                                <td nowrap class="arbor">{{i.arbor|floatformat}}</td>
-                                <td nowrap class="gravit">{{i.gravit|floatformat}}</td>
-                                <td nowrap class="updated_at">{{i.updated_time|date:'Y-m-d H:i:s'}}</td>
-                                <td nowrap class="move_group_name">{{i.move_group_name}}</td>
+                                <td nowrap class="user_id">{{i.user_name}}</td>
+                                <td nowrap class="std_stable1">{{i.std_stable1}}</td>
+                                <td nowrap class="std_stable2">{{i.std_stable2}}</td>
+                                <td nowrap class="std_arbor">{{i.std_arbor}}</td>
+                                <td nowrap class="stable1">{{i.stable1}}</td>
+                                <td nowrap class="stable2">{{i.stable2}}</td>
+                                <td nowrap class="arbor">{{i.arbor}}</td>
+                                <td nowrap class="gravit">{{i.gravit}}</td>
+                                <td nowrap class="updated_at">{{i.created_at|date:'Y-m-d H:i:s'}}</td>
                                 <td nowrap class="remarks">{{i.remarks}}</td>
-                                <td nowrap class="status">{{i.tkt_status}}</td>
                                 {% endfor %}
                             </tr>
                             </tbody>
@@ -123,7 +186,7 @@ td {
         </div>
     </div>
 </section>
-
+</main>
 <script src="{% static 'capacity_app/table_extensions/vendor/jquery/jquery-3.3.1.min.js' %}"></script>
 <script src="{% static 'capacity_app/table_extensions/vendor/bootstrap/js/popper.js' %}"></script>
 <script src="{% static 'capacity_app/table_extensions/vendor/bootstrap/js/popper.min.js' %}"></script>
