--- a/capacity_app/templates/capacity_app/update_request.html
+++ b/capacity_app/templates/capacity_app/update_request.html
@@ -25,8 +25,101 @@ input[type="text"] {
     font-size:14px;
     height: 40px;
 }
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+thead {
+    background-color: #e9ecef;
+    border: 1px solid #ced4da;
+}
+tbody {
+    background-color: #e9ecef;
+    border: 1px solid #ced4da;
+}
+.card-view {
+    height:30px;
+}
 </style>
 <body>
+<!-- ======= Sidebar ======= -->
+<aside id="sidebar" class="sidebar">
+
+    <ul class="sidebar-nav" id="sidebar-nav">
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="{% url 'dashboard' %}">
+                <i class="bi bi-grid"></i>
+                <span>Dashboard</span>
+            </a>
+        </li><!-- End Dashboard Nav -->
+        {% if "admin" not in user_group %}
+        <li class="nav-item">
+            <a class="nav-link" data-bs-target="#components-nav1" data-bs-toggle="collapse" href="#">
+                <i class="bi bi-journal-text"></i>
+                <span>Project Planner</span>
+                <i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="components-nav1" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
+                <!--<li>
+                    <a href="{% url 'project_create_request' %}">
+                        <i class="bi bi-circle"></i><span>Create Project Request</span>
+                    </a>
+                </li>-->
+
+                <li>
+                    <a href="{% url 'project_view_request' %}">
+                        <i class="bi bi-circle"></i><span>View Project Plan</span>
+                    </a>
+                </li>
+
+            </ul>
+        </li><!-- End Components Nav -->
+        {% endif %}
+
+        {% if query_data %}
+        <li class="nav-heading">Capacity - Alpha4</li>
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
+                <i class="bi bi-menu-button-wide"></i>
+                <span>Request - Alpha4</span>
+                <i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                {% if user_group != "admin" %}
+                <li>
+                    <a href="{% url 'create_request' %}">
+                        <i class="bi bi-circle"></i><span>Create Request</span>
+                    </a>
+                </li>
+                {% endif %}
+                <li>
+                    <a href="{% url 'view_request' %}">
+                        <i class="bi bi-circle"></i><span>View Request</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'completed_ticket_data' %}">
+                        <i class="bi bi-circle"></i><span>Completed Request</span>
+                    </a>
+                </li>
+            </ul>
+        </li><!-- End Components Nav -->
+        {% endif %}
+    </ul>
+
+</aside><!-- End Sidebar-->
+
+<main id="main" class="main">
 <div class="pagetitle">
     <h1>Update Request</h1>
     <nav>
@@ -59,37 +152,37 @@ input[type="text"] {
                         <div class="row">
                             <div class="mb-3 col-md-6">
                                 <label for="user_id" class="form-label">User ID</label>
-                                <input type="text" class="form-control" id="user_id" name="user_id" value="{{data.user_id}}" readonly>
+                                <input type="text" class="form-control" id="user_id" name="user_id" value="{{data.user_name}}" readonly>
                             </div>
                             <div class="mb-3 col-md-6">
                                 <label for="std_stable1" class="form-label">Std Stable1 (TB)</label>
-                                <input type="number" class="form-control" id="std_stable1" name="std_stable1" min="0" max="500" value="{{data.std_stable_1|floatformat}}"  required>
+                                <input type="number" class="form-control" id="std_stable1" name="std_stable1" min="0" max="500" value="{{data.std_stable1}}"  required>
                             </div>
                         </div>
                         <div class="row">
                             <div class="mb-3 col-md-6">
                                 <label for="std_stable2" class="form-label">Std Stable2 (TB)</label>
-                                <input type="number" class="form-control" id="std_stable2" name="std_stable2" min="0" max="500" value="{{data.std_stable_2|floatformat}}" required>
+                                <input type="number" class="form-control" id="std_stable2" name="std_stable2" min="0" max="500" value="{{data.std_stable2}}" required>
                             </div>
                             <div class="mb-3 col-md-6">
                                 <label for="std_arbor" class="form-label">Std Arbor (TB)</label>
-                                <input type="number" class="form-control" id="std_arbor" name="std_arbor" min="0" max="500" value="{{data.std_arbor|floatformat}}" required>
+                                <input type="number" class="form-control" id="std_arbor" name="std_arbor" min="0" max="500" value="{{data.std_arbor}}" required>
                             </div>
                         </div>
                         <div class="row">
                             <div class="mb-3 col-md-6">
                                 <label for="stable1" class="form-label">Stable1 (TB)</label>
-                                <input type="number" class="form-control" id="stable1" name="stable1" min="0" max="500" value="{{data.stable_1|floatformat}}" required>
+                                <input type="number" class="form-control" id="stable1" name="stable1" min="0" max="500" value="{{data.stable1}}" required>
                             </div>
                             <div class="mb-3 col-md-6">
                                 <label for="stable2" class="form-label">Stable2 (TB)</label>
-                                <input type="number" class="form-control" id="stable2" name="stable2" min="0" max="500" value="{{data.stable_2|floatformat}}" required>
+                                <input type="number" class="form-control" id="stable2" name="stable2" min="0" max="500" value="{{data.stable2}}" required>
                             </div>
                         </div>
                         <div class="row">
                             <div class="mb-3 col-md-6">
                                 <label for="arbor" class="form-label">Arbor (TB)</label>
-                                <input type="number" class="form-control" id="arbor" name="arbor" min="0" max="500" value="{{data.arbor|floatformat}}" required>
+                                <input type="number" class="form-control" id="arbor" name="arbor" min="0" max="500" value="{{data.arbor}}" required>
                             </div>
                             <div class="mb-3 col-md-6">
                                 <label for="gravit" class="form-label">Gravit (TB)</label>
@@ -134,6 +227,7 @@ input[type="text"] {
         </div>
     </div>
 </section>
+</main>
 <script src="{% static 'capacity_app/table_extensions/vendor/jquery/jquery2.1.min.js' %}"></script>
 
 <script>
