--- a/capacity_app/templates/capacity_app/project_view_request.html
+++ b/capacity_app/templates/capacity_app/project_view_request.html
@@ -267,7 +267,7 @@ tbody {
                                 <div class="mb-3 col-md-6">
                                     <label class="form-label">Request Id - </label>
                                     <td nowrap class="id">
-                                         <a href="{% url 'history_request' %}" style="text-decoration:underline;">{{data.0.id}}</a>
+                                         <a href="{% url 'history_request' %}" style="text-decoration:underline;">{{data.0.request_id}}</a>
                                     </td>
                                 </div>
                             </div>
