--- a/capacity_app/templates/capacity_app/history_request.html
+++ b/capacity_app/templates/capacity_app/history_request.html
@@ -163,7 +163,7 @@ td {
                             <tbody>
                             {% for i in data %}
                             <tr>
-                                <td nowrap class="request_id">{{i.id}}</td>
+                                <td nowrap class="request_id">{{i.request_id}}</td>
                                 <td nowrap class="dc">{{i.data_center}}</td>
                                 <td nowrap class="project_name">{{i.project_name}}</td>
                                 <td nowrap class="user_id">{{i.user_name}}</td>
