--- a/capacity_app/templates/capacity_app/procurement_approval.html
+++ b/capacity_app/templates/capacity_app/procurement_approval.html
@@ -117,7 +117,7 @@ td {
                                 <tbody>
                                 {% for i in data %}
                                 <tr>
-                                    <td nowrap class="id">{{i.id}}</td>
+                                    <td nowrap class="id">{{i.request_id}}</td>
                                     <td nowrap class="dc">{{i.data_center}}</td>
                                     <td nowrap class="project_name">{{i.project_name}}</td>
                                     <td nowrap class="user_id">{{i.user_name}}</td>
@@ -131,7 +131,7 @@ td {
                                     <td nowrap class="updated_at">{{i.created_at|date:'Y-m-d H:i:s'}}</td>
                                     <td nowrap class="remarks">{{i.remarks}}</td>
                                     <td>
-                                        <button type="button" class="btn btn-primary btn-sm" title="Complete Request"><a style="text-decoration:none;color:#fff;" href="{% url 'completed_procurement_approval' pk=i.id %}"><i class="fas fa-check"></i>&nbsp;Approve</a></button>
+                                        <button type="button" class="btn btn-primary btn-sm" title="Complete Request"><a style="text-decoration:none;color:#fff;" href="{% url 'completed_procurement_approval' pk=i.request_id %}"><i class="fas fa-check"></i>&nbsp;Approve</a></button>
                                     </td>
                                     {% endfor %}
                                 </tr>
